--- a/VISUALG.INI
+++ b/VISUALG.INI
@@ -1,6 +1,6 @@
 [Files]
-MRUFile1=C:\Users\Magno\Google Drive\ADS\1T2016\fundamentos_objectivec\algoritimos\maior_de_10.alg
-MRUFile2=C:\Users\Magno\Google Drive\ADS\1T2016\fundamentos_objectivec\algoritimos\qual_o_maior.alg
+MRUFile1=C:\Users\Magno\Google Drive\ADS\1T2016\fundamentos_objectivec\vetor_calcular_media.alg
+MRUFile2=C:\Users\Magno\Google Drive\ADS\1T2016\fundamentos_objectivec\algoritimos (1)\vetor_calcular_media.alg
 MRUFile3=C:\Users\Magno\Google Drive\ADS\1T2016\fundamentos_objectivec\TPs\alg_tp1\pares_50_for_do.alg
 MRUFile4=C:\Users\Magno\Google Drive\ADS\1T2016\fundamentos_objectivec\TPs\alg_tp1\pares_50_entrega.alg
 MRUFile5=C:\Users\Magno\Google Drive\ADS\1T2016\fundamentos_objectivec\TPs\alg_tp1\pares_50.alg
